--- a/MyTradeMTG/Views/Admin/WalletList.cshtml
+++ b/MyTradeMTG/Views/Admin/WalletList.cshtml
@@ -6,9 +6,9 @@
 }
 <style>
     td#txtPayment {
-    white-space: break-spaces;
-    /* word-break: break-all; */
-}
+        white-space: break-spaces;
+        /* word-break: break-all; */
+    }
 </style>
 
 @using (Html.BeginForm("WalletList", "Admin", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
@@ -47,7 +47,7 @@
                                     <input type="hidden" id="PMode" value="@Model.PaymentMode" />
                                     <select id="PaymentMode" name="PaymentMode" class="default-select wide form-control" onchange="return setstatus();">
                                         @*<option value="0">-Select-</option>
-                                        <option value="Online">Online</option>*@
+                                            <option value="Online">Online</option>*@
                                         <option value="Offline">Offline</option>
                                     </select>
                                 </div>
@@ -61,61 +61,51 @@
                                         <option value="Pending">Pending</option>
                                         <option value="Approved">Approved</option>
                                         <option value="Declined">Declined</option>
-                                       
+
                                     </select>
                                 </div>
                             </div>
                             <div class="col-md-3">
                                 <div class="form-group">
-                                        <input class="btn btn-success pull-left" type="submit" value="Get Details" id="GetDetails" name="GetDetails" />
-                                   
+                                    <input class="btn btn-success pull-left" type="submit" value="Get Details" id="GetDetails" name="GetDetails" />
+
                                 </div>
                             </div>
                         </div>
-                     
-                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
-                                <thead>
-                                    <tr>
-                                        <th>Sr No.</th>
-                                        <th>Login Id</th>
-                                        <th>Name</th>
-                                        <th>Date</th>
-                                        <th>Narration</th>
-                                        <th>Net(MTG)</th>
-                                        <th>Processing Charge(MTG)</th>
-                                        <th>Gross(MTG)</th>
-                                        <th>Net(INR)</th>
-                                        <th>Processing Charge(INR)</th>
-                                        <th>Gross(INR)</th>
-                                        <th>Payment Mode</th>
-                                        <th>Action</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
+
+                        <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    @*<th>Request Code</th>*@
+                                    <th>Login Id</th>
+                                    <th>Name</th>
+                                    <th>MTG /USDT</th>
+                                    <th>Payment Mode</th>
+                                    <th>Requested Date</th>
+                                    <th>Status</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lstWallet != null)
                                     {
-                                        if (Model.lstWallet != null)
+                                        int i = 1;
+                                        foreach (var Item in Model.lstWallet)
                                         {
-                                            int i = 1;
-                                            foreach (var Item in Model.lstWallet)
-                                            {
-                                                <tr class="text-left">
-                                                    <td>@i</td>
-                                                    <td>@Item.LoginId</td>
-                                                    <td>@Item.Name</td>
-                                                    <td>@Item.TransactionDate</td>
-                                                    <td></td>
-                                                    <td>@Item.Amount</td>
-                                                    <td>@Item.TDSAmount (@Item.ProcessingFee)</td>
-                                                    <td>@Item.GrossAmount</td>
-                                                    <td>@Item.IndianValue</td>
-                                                    <td>@Item.TransferChargeInRupees</td>
-                                                    <td>@Item.GrossAmountRs</td>
-                                                    @*<td>@Item.Amount</td>*@
-                                                    <td>
-                                                        <a href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup('@Item.PaymentMode');">View</a>
-                                                    </td>
-                                                    @*@if (@Item.PaymentMode == "Cash")
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                @*<td>@Item.RequestCode</td>*@
+                                                <td>@Item.LoginId</td>
+                                                <td>@Item.DisplayName</td>
+
+                                                <td>@Item.Amount</td>
+                                                <td>
+                                                    <a href="javascript:void(0)" class="btn btn-success btn-sm" onclick="openPopup('@Item.PaymentMode');">View</a>
+                                                </td>
+                                                @*@if (@Item.PaymentMode == "Cash")
                                                     {
                                                     <td>@Item.PaymentMode</td>
                                                     }
@@ -123,48 +113,48 @@
                                                     {
                                                     <td>@Item.PaymentMode- (@Item.BankName,@Item.BankBranch, <b>Txn No.-@Item.ChequeDDNo</b>, <b>Txn Date-</b>@Item.ChequeDDDate)</td>
                                                     }*@
-                                                    @*<td>@Item.TransactionDate</td>*@
-                                                    @*<td>@Item.Status</td>*@
-                                                    @if (Item.Status == "Pending")
+                                                <td>@Item.TransactionDate</td>
+                                                <td>@Item.Status</td>
+                                                @if (Item.Status == "Pending")
+                                                {
+                                                    <td class="d-flex">
+                                                        <a href="/Admin/Approve?id=@Item.RequestID" class="m-1 btn btn-success btn-sm " onclick="return confirm('Are you sure you want to Approve this ewallet request ?') ">Approve</a>
+                                                        <a href="/Admin/DeClined?id=@Item.RequestID" class="m-1 btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to decline this ewallet request  ?') ">Decline</a>
+
+                                                    </td>
+                                                }
+
+                                                @*else if (Item.Status == "Approved")
                                                     {
-                                                        <td class="d-flex">
-                                                            <a href="/Admin/Approve?id=@Item.RequestID" class="m-1 btn btn-success btn-sm " onclick="return confirm('Are you sure you want to Approve this ewallet request ?') ">Approve</a>
-                                                            <a href="/Admin/DeClined?id=@Item.RequestID" class="m-1 btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to decline this ewallet request  ?') ">Decline</a>
+                                                        <td>*@
+                                                @*<a href="/Admin/DeClined?id=@Item.RequestID" class="btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to decline this ewallet request  ?') ">Decline</a>*@
 
-                                                        </td>
-                                                    }
-                                                    
-                                                    @*else if (Item.Status == "Approved")
-                                                        {
-                                                            <td>*@
-                                                    @*<a href="/Admin/DeClined?id=@Item.RequestID" class="btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to decline this ewallet request  ?') ">Decline</a>*@
-
-                                                    @*<span>Approved</span>*@
+                                                @*<span>Approved</span>*@
 
 
-                                                    @*</td>
-                                                        }*@
-                                                    @*else if (Item.Status == "Declined")
-                                                        {
-                                                            <td>*@
-                                                    @*<a href="/Admin/Approve?id=@Item.RequestID" class="btn btn-success btn-sm " onclick="return confirm('Are you sure you want to Approve this ewallet request  ?') ">Approve</a>*@
-
-                                                    @*<span>Declined</span>*@
-                                                    @*</td>
-                                                        }*@
-
-                                                    else
+                                                @*</td>
+                                                    }*@
+                                                @*else if (Item.Status == "Declined")
                                                     {
-                                                        <td></td>
-                                                    }
-                                                </tr>
-                                                i++;
-                                            }
+                                                        <td>*@
+                                                @*<a href="/Admin/Approve?id=@Item.RequestID" class="btn btn-success btn-sm " onclick="return confirm('Are you sure you want to Approve this ewallet request  ?') ">Approve</a>*@
+
+                                                @*<span>Declined</span>*@
+                                                @*</td>
+                                                    }*@
+
+                                                else
+                                                {
+                                                    <td></td>
+                                                }
+                                            </tr>
+                                            i++;
                                         }
                                     }
-                                </tbody>
-                            </table>
-                      
+                                }
+                            </tbody>
+                        </table>
+
                     </div>
                 </div>
             </div>
@@ -197,8 +187,8 @@
     </div>
 }
 @*<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />*@
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />*@
 <script src="~/plugins/flatpickr/flatpickr.js"></script>
 <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <link href="~/plugins/flatpickr/flatpickr.css" rel="stylesheet" type="text/css">
