--- a/MyTradeMTG/Views/User/TopUp.cshtml
+++ b/MyTradeMTG/Views/User/TopUp.cshtml
@@ -21,9 +21,9 @@
                             <div class="row">
                                 <div class="col-xl-12 col-md-12 col-sm-12 col-12">
                                     <h4>Top-Up</h4>
-                                    <span class="text-danger" style="color:red;">
+                                    @*<span class="text-danger" style="color:red;">
                                         @TempData["msg"]
-                                    </span>
+                                    </span>*@
                                 </div>
                             </div>
                         </div>
