--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -585,12 +585,12 @@
 
                     <div class="col-lg-12 form-group">
                         @*<input type="text" placeholder="Enter Your First Name" />*@
-                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", @placeholder = "First Name*", @required = "true" })
+                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", @placeholder = "First Name*", @required = "true", @onkeypress = "return onlyAlphabets(event,this);" })
 
                     </div>
                     <div class="col-lg-12 form-group">
                         @*<input type="email" placeholder="Enter Your Last Name" />*@
-                        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", @placeholder = "Last Name" })
+                        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", @placeholder = "Last Name", @onkeypress = "return onlyAlphabets(event,this);" })
 
                     </div>
                     <div class="col-lg-12 form-group">
@@ -600,7 +600,7 @@
                     </div>
                     <div class="col-lg-12 form-group">
                         @*<input type="email" placeholder="Your Email Address" />*@
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email*" })
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email*", @Onchange = "checkEmail();" })
 
                     </div>
                     <div class="col-lg-12 form-group">
@@ -947,6 +947,42 @@
             return false;
         }
     }
+    function checkEmail() {
+        debugger;
+
+        if (($("#Email").val() != "")) {
+            if ($("#Email").val()) {
+
+                var email = document.getElementById('Email');
+                var filter = new RegExp(/^(("[\w-\s]+")|([\w-]+(?:\.[\w-]+)*)|("[\w-\s]+")([\w-]+(?:\.[\w-]+)*))(@@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$)|(@@\[?((25[0-5]\.|2[0-4][0-9]\.|1[0-9]{2}\.|[0-9]{1,2}\.))((25[0-5]|2[0-4][0-9]|1[0-9]{2}|[0-9]{1,2})\.){2}(25[0-5]|2[0-4][0-9]|1[0-9]{2}|[0-9]{1,2})\]?$)/i);
+
+                if (!filter.test($("#Email").val())) {
+                    alert('Please provide a valid email address');
+                    $("#Email").val('');
+                    $("#Email").focus();
+                    return false;
+                }
+            }
+        }
+    }
+   function onlyAlphabets(e, t) {
+            try {
+                if (window.event) {
+                    var charCode = window.event.keyCode;
+                }
+                else if (e) {
+                    var charCode = e.which;
+                }
+                else { return true; }
+                if ((charCode > 64 && charCode < 91) || (charCode > 96 && charCode < 123))
+                    return true;
+                else
+                    return false;
+            }
+            catch (err) {
+                alert(err.Description);
+            }
+        }
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script>
